# estel_secp256k1

./: .rustfmt.toml  Cargo.toml  README.md  lint.sh
.github/workflows/: audit.yaml  ci.yaml  release.yaml
src/: ecc.rs  error.rs  field.rs  hmac.rs  key.rs  lib.rs  modinv.rs  scalar.rs  sig.rs
tests/: key_test.rs
