[package]
name = "estel_secp256k1"
version = "0.0.0"
edition = "2021"
description = "ECDSA signature and verification implementation"
keywords = ["secp256k1", "ECDSA", "crypto", "estel"]
repository = "https://github.com/alexlren/estel_secp256k1.git"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
sha2 = "0.9.8"
hmac = "0.11.0"
